--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,33 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <title>Tailwind Starter Template</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  </head>
-  <body>
-    <div class="min-h-screen flex items-center justify-center">
-      <h1 class="text-5xl text-purple font-sans">Greetings.</h1>
-    </div>
-  </body>
+<html lang="fr">
+
+<head>
+  <title>Portfolio Théotime Poisseau</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+</head>
+
+<body class="text-grey-darkest">
+  <header class="flex items-start content-start justify-between">
+    <section class="bg-white max-w-sm shadow-md rounded-lg overflow-hidden m-2">
+      <div class="sm:flex sm:items-center px-6 py-4">
+        <img class="block h-16 sm:h-24 rounded-full mx-auto mb-4 sm:mb-0 sm:mr-4 sm:ml-0"
+          src="https://avatars0.githubusercontent.com/u/22891227?s=400&u=4a1eb70bcc45f0b5eaf7735b483340588bc71306&v=4"
+          alt="">
+        <div class="text-center sm:text-left sm:flex-grow">
+          <div class="mb-4">
+            <p class="text-xl leading-tight mb-1">Théotime Poisseau</p>
+            <p class="text-sm leading-tight text-grey-dark">27 rue du solayer</p>
+            <p class="text-sm leading-tight text-grey-dark mb-1">63100 Clermont-Ferrand</p>
+            <p class="text-sm leading-tight text-grey-dark">0661623372</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="bg-white max-w-sm shadow-md rounded-lg overflow-hidden m-2">
+      <h1 class="text-4xl leading-tight px-2">Développeur Web</h1>
+    </section>
+  </header>
+</body>
+
 </html>
